--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,8 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 29
         targetSdkVersion = 29
+        // Only using Android Support libraries
+        supportLibVersion = "28.0.0"
     }
     repositories {
         google()
